tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.stderr
error[E0412]: cannot find type `ExtMuxCascadedMuxAIndex` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:191:39
    |
191 |     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
    |                                       ^^^^^^^^^^^^^^^^^^^^^^^
...
301 | pub enum ExtMuxCascadedMuxedA2MuxBIndex {
    | --------------------------------------- similarly named enum `ExtMuxCascadedMuxedA2MuxBIndex` defined here
    |
help: an enum with a similar name exists
    |
191 -     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxAIndex, CanError> {
191 +     pub fn mux_a(&mut self) -> Result<ExtMuxCascadedMuxedA2MuxBIndex, CanError> {
    |
help: you might be missing a type parameter
    |
 67 | impl<ExtMuxCascadedMuxAIndex> ExtMuxCascaded {
    |     +++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:195:49
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
195 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0422]: cannot find struct, variant or union type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:202:49
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
202 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                                                 ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0412]: cannot find type `ExtMuxCascadedMuxAM0` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:236:37
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
236 |     pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0412]: cannot find type `ExtMuxCascadedMuxAM1` in this scope
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:245:37
    |
 55 | pub struct ExtMuxCascaded {
    | ------------------------- similarly named struct `ExtMuxCascaded` defined here
...
245 |     pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |                                     ^^^^^^^^^^^^^^^^^^^^ help: a struct with a similar name exists: `ExtMuxCascaded`

error[E0592]: duplicate definitions with name `set_m0`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:236:5
    |
154 | /     pub fn set_m0(
155 | |         &mut self,
156 | |         value: ExtMuxCascadedMuxedA2MuxBM0,
157 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m0`
...
236 |       pub fn set_m0(&mut self, value: ExtMuxCascadedMuxAM0) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m0`

error[E0592]: duplicate definitions with name `set_m1`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:245:5
    |
166 | /     pub fn set_m1(
167 | |         &mut self,
168 | |         value: ExtMuxCascadedMuxedA2MuxBM1,
169 | |     ) -> Result<(), CanError> {
    | |_____________________________- other definition for `set_m1`
...
245 |       pub fn set_m1(&mut self, value: ExtMuxCascadedMuxAM1) -> Result<(), CanError> {
    |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ duplicate definitions for `set_m1`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:128:46
    |
128 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:195:21
    |
195 |                     ExtMuxCascadedMuxAIndex::M0(ExtMuxCascadedMuxAM0 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`

error[E0433]: failed to resolve: use of undeclared type `ExtMuxCascadedMuxAIndex`
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:202:21
    |
202 |                     ExtMuxCascadedMuxAIndex::M1(ExtMuxCascadedMuxAM1 {
    |                     ^^^^^^^^^^^^^^^^^^^^^^^
    |                     |
    |                     use of undeclared type `ExtMuxCascadedMuxAIndex`
    |                     help: an enum with a similar name exists: `ExtMuxCascadedMuxedA2MuxBIndex`

error[E0277]: the trait bound `u16: From<i8>` is not satisfied
   --> tests-snapshots/dbc-cantools/issue_184_extended_mux_cascaded_dumped.snap.rs:210:46
    |
210 |                     multiplexor: multiplexor.into(),
    |                                              ^^^^ the trait `From<i8>` is not implemented for `u16`
    |
    = help: the following other types implement trait `From<T>`:
              `u16` implements `From<Char>`
              `u16` implements `From<bool>`
              `u16` implements `From<u8>`
    = note: required for `i8` to implement `Into<u16>`
